<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    app:cardCornerRadius="20dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/upload_daste"
            android:hint="@string/daste"
            android:textColorHint="@color/gray"
            android:inputType="text"
            android:textSize="14sp"
            android:textAlignment="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shape_dialod_upload"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/upload_reshte"
            android:hint="@string/reshte"
            android:layout_below="@id/upload_daste"
            android:textColorHint="@color/gray"
            android:inputType="text"
            android:textSize="14sp"
            android:textAlignment="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shape_dialod_upload"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/upload_ostad"
            android:hint="@string/ostad"
            android:layout_below="@id/upload_reshte"
            android:textColorHint="@color/gray"
            android:inputType="text"
            android:textSize="14sp"
            android:textAlignment="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shape_dialod_upload"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/upload_daneshgah"
            android:hint="@string/uni"
            android:layout_below="@id/upload_ostad"
            android:textColorHint="@color/gray"
            android:inputType="text"
            android:textSize="14sp"
            android:textAlignment="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shape_dialod_upload"/>
        <RelativeLayout
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_below="@id/upload_daneshgah"
            android:background="@drawable/shape_border_ok"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_centerVertical="true"
                android:textColor="@color/white"
                android:layout_alignParentRight="true"
                android:text="@string/upload_file"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_upload_icon"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_below="@id/upload_daneshgah"
            android:background="@drawable/shape_dialod_upload"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:text="@string/file"/>

        </RelativeLayout>


    </RelativeLayout>


</androidx.cardview.widget.CardView>