<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".student_profile">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:id="@+id/moshakhasat"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/ic_add_edit"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:id="@+id/edit_profile"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/profile_user_name"
                    android:hint="@string/user_name"
                    android:textColorHint="@color/gray"
                    android:backgroundTint="@color/gray"
                    app:backgroundTint="@color/blue_light"
                    android:inputType="text"
                    android:textSize="14sp"
                    android:textAlignment="textStart"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/profile_password"
                    android:hint="@string/password"
                    android:textColorHint="@color/gray"
                    android:backgroundTint="@color/gray"
                    app:backgroundTint="@color/blue_light"
                    android:inputType="numberPassword"
                    android:textSize="14sp"
                    android:textAlignment="textStart"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_below="@id/signup_user_name"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/profile_email"
                    android:layout_below="@id/signup_family"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    android:textColorHint="@color/gray"
                    android:backgroundTint="@color/gray"
                    app:backgroundTint="@color/blue_light"
                    android:textSize="14sp"
                    android:textAlignment="textStart"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/profile_phone_number"
                    android:layout_below="@id/signup_email"
                    android:inputType="phone"
                    android:hint="@string/phone_number"
                    android:textColorHint="@color/gray"
                    android:backgroundTint="@color/gray"
                    app:backgroundTint="@color/blue_light"
                    android:textSize="14sp"
                    android:textAlignment="textStart"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp" />
                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/profile_reshte"
                    android:layout_below="@id/signup_phone_number"
                    android:inputType="text"
                    android:hint="@string/reshte"
                    android:textColorHint="@color/gray"
                    android:backgroundTint="@color/gray"
                    app:backgroundTint="@color/blue_light"
                    android:textSize="14sp"
                    android:textAlignment="textStart"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    />
            </LinearLayout>
            <RelativeLayout
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_below="@id/moshakhasat"
                android:id="@+id/moshakhasat_cart"
                android:layout_centerHorizontal="true">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/blue_light"
                    android:layout_centerVertical="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:text="@string/bank_moshakhasat"
                    android:layout_centerInParent="true"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:padding="15dp"/>

            </RelativeLayout>
            <LinearLayout
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:id="@+id/lnr_cart"
                android:layout_below="@id/moshakhasat_cart"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/profile_fullname"
                    android:inputType="text"
                    android:hint="@string/full_name"
                    android:textColorHint="@color/gray"
                    android:backgroundTint="@color/gray"
                    app:backgroundTint="@color/blue_light"
                    android:textSize="14sp"
                    android:textAlignment="textStart"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp" />
                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/profile_card_number"
                    android:inputType="number"
                    android:hint="@string/card_number"
                    android:textColorHint="@color/gray"
                    android:backgroundTint="@color/gray"
                    app:backgroundTint="@color/blue_light"
                    android:textSize="14sp"
                    android:textAlignment="textStart"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp" />
                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/profile_bank_name"
                    android:inputType="text"
                    android:hint="@string/book_name"
                    android:textColorHint="@color/gray"
                    android:backgroundTint="@color/gray"
                    app:backgroundTint="@color/blue_light"
                    android:textSize="14sp"
                    android:textAlignment="textStart"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp" />
                <Button
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:background="@drawable/shape_ok"
                    android:text="@string/ok"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:id="@+id/btn_ok_profile"/>

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>