<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".support">
    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/lnr_icon"
        android:text="@string/support_text"
        android:textSize="16sp"
        android:layout_margin="16dp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:id="@+id/lnr_icon"
        android:layout_above="@id/support_email"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp">
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:background="@drawable/instagram_icon"/>
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:background="@drawable/telegram_icon"/>
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:background="@drawable/whatsup_icon"/>
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"

            android:background="@drawable/telephone_icon"/>
    </LinearLayout>
    <EditText
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/support_subject"
        android:id="@+id/support_email"
        android:hint="@string/support_email"
        android:textDirection="rtl"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:padding="10dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shape_support"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/support_nazarat"
        android:id="@+id/support_subject"
        android:hint="@string/support_mozuoo"
        android:textDirection="rtl"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:padding="10dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shape_support"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:id="@+id/support_nazarat"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/btn_send_support"
        android:hint="@string/support_nazarat"
        android:textDirection="rtl"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:padding="10dp"
        android:background="@drawable/shape_support"/>
    <Button
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:id="@+id/btn_send_support"
        android:background="@drawable/shape_ok"
        android:layout_margin="16dp"
        android:text="@string/send"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>