<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_back"
    tools:context=".login">
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/page_one"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="100dp"
        android:layout_above="@id/go_to_sign_up"/>
    <RelativeLayout
        android:layout_width="310dp"
        android:layout_height="140dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/shape_login"
        android:id="@+id/rel_edt"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="50dp"
        android:layout_above="@id/go_to_sign_up">
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/login_user_name"
            android:hint="@string/user_name"
            android:textColorHint="@color/gray"
            android:backgroundTint="@color/gray"
            android:inputType="text"
            android:textSize="14sp"
            android:textAlignment="textStart"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/login_password"
            android:hint="@string/password"
            android:textColorHint="@color/gray"
            android:backgroundTint="@color/gray"
            android:inputType="numberPassword"
            android:textSize="14sp"
            android:textAlignment="textStart"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="40dp"
            android:layout_below="@id/login_user_name"/>

    </RelativeLayout>
    <Button
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:id="@+id/ok_login"
        android:layout_marginBottom="20dp"
        android:background="@drawable/ic_tik"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/go_to_sign_up"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:id="@+id/go_to_sign_up"/>
</RelativeLayout>