<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/myDraw"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/toolbar"
            android:layout_alignParentTop="true"
            android:elevation="4dp"
            android:gravity="center"
            android:textAlignment="center"
            android:background="@color/white"
            android:layoutDirection="rtl">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="16dp"
                    android:background="@drawable/ic_menu"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:id="@+id/img_menu"/>
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/ic_search"
                    android:layout_toLeftOf="@id/img_menu"
                    android:layout_centerVertical="true"
                    android:id="@+id/img_search"/>

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
        <com.google.android.material.tabs.TabLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/tab"
            app:tabGravity="fill"
            app:tabSelectedTextColor="@color/black"
            app:tabTextColor="@color/black"
            app:tabIndicatorFullWidth="false"
            app:tabIconTintMode="multiply"
            app:tabIndicator="@drawable/ic_drop_down"
            app:tabIndicatorGravity="bottom"
            app:tabInlineLabel="true"
            app:tabIndicatorHeight="28dp"
            app:tabIndicatorAnimationDuration="10"
            app:tabRippleColor="@color/blue_light">



            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/omumi"/>

            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/takhasosi"/>

            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/maqale" />

        </com.google.android.material.tabs.TabLayout>
        <androidx.viewpager.widget.ViewPager
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/viewpager"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="match_parent"
        android:layout_gravity="right">
        <include
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@drawable/shape_image_white_profile"
            layout="@layout/menu_bottom"
            android:layout_gravity="bottom"/>
    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>